syntax = "proto3";

package url;

option go_package = "/model;url";

service UrlShorteningService {
  rpc CreateUrl(CreateUrlRequest) returns (CreateUrlResponse);
  rpc AccessUrl(AccessUrlRequest) returns (AccessUrlResponse);
}

message CreateUrlRequest {
  string api_dev_key = 1;
  string original_url = 2;
  string custom_short_url = 3;
  string user_name = 4;
  uint32 exprire_time = 5;  
}

message CreateUrlResponse {
  string short_url = 1;
  uint32 error_code = 2;
  string error_message = 3;
}

message AccessUrlRequest {
  string api_dev_key = 1;
  string short_url = 2;
}

message AccessUrlResponse {
  string original_url = 1;
  uint32 error_code = 2;
  string error_message = 3;  
}
